--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,14 @@
     <string name="character_species_text">Species name:</string>
     <string name="character_languages_text">Languages:</string>
     <string name="loading">Loading…</string>
+    <string name="nothing_found">Nothing found!</string>
+    <string name="loading_films">Loading films</string>
+    <string name="no_films_were_found">No films were found!</string>
     <string name="planet_information_text">Planet Information</string>
     <string name="planet_name_text">Planet name:</string>
     <string name="planet_population_text">Planet population:</string>
     <string name="not_applicable">n/a</string>
     <string name="film_information_text">Film Information</string>
+    <string name="details_text">Details:</string>
+    <string name="character_search_title">Character Search</string>
 </resources>
